--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "common"]
 	path = common
 	url = https://github.com/oskarirauta/common_cpp.git
+[submodule "logger"]
+	path = logger
+	url = https://github.com/oskarirauta/logger_cpp.git
